[bugfix] Oops forgot to add dark mode support

--- a/src/pages/errorreport/errordetail/styles.css
+++ b/src/pages/errorreport/errordetail/styles.css
@@ -34,3 +34,7 @@
   height: 200px;
   width: 200px;
 }
+
+.slide-broken-dark {
+  background: #343434;
+}
